--- a/serverNodeJS/public/index.html
+++ b/serverNodeJS/public/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <video id="remoteVideo" autoplay="autoplay"></video>
+    <video controls loop autoplay id="remoteVideo"></video>
 
 </body>
 </html>
